<resources>
    <string name="app_name">Marathon</string>
    <string name="welcome_message">Welcome!</string>
    <string name="fill_data_text">Fill Your Data Or</string>
    <string name="continue_with_sm_text">Continue With Social Media</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="email_hint">xyz@gmail.com</string>
    <string name="password_hint">********</string>
    <string name="Log_in">Log in</string>
    <string name="recover">Recover password</string>
    <string name="first_time">First time?</string>
    <string name="create_user">Create user</string>

    <string name="registration">Registration</string>
    <string name="your_name">Your name</string>
    <string name="name_hint">xxxxxxxx</string>
    <string name="have_an_account">have an account?</string>
    <string name="enter">Enter</string>
    <string name="personal_data_agreement">I agree to the processing of personal data</string>
    <string name="register">Register</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_account">Enter Your Account For Reset</string>
    <string name="send">Send</string>
    <!--onboard-->
    <string name="Matule">MATULE</string>
    <string name="Me">ME</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="adventure">Lets begin the adventure</string>
    <string name="collection">Smart, Gorgeous and Fashionable Collection Explore Now</string>
    <string name="power">You Have the Power To</string>
    <string name="plants">There Are Many Beautiful And Attractive Plants To Your Room</string>
    <!--main-->
    <string name="explore">Explore</string>
</resources>