<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.Registration">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="340dp"
        android:layout_height="56dp"
        app:boxBackgroundColor="#F5F5F7"
        app:boxBackgroundMode="outline"
        app:passwordToggleEnabled="false"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="360dp">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="335dp"
            android:layout_height="49dp"
            android:backgroundTint="#F5F5F7"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/email_hint"
            android:password="false"
            android:singleLine="false"
            android:textColor="#A2A2A2" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/Email"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="327dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="349dp"
        android:layout_height="66dp"
        app:boxBackgroundColor="#F5F5F7"
        app:passwordToggleEnabled="true"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="449dp">

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="339dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/Password"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="416dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/fill_data_text"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="150dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/have_an_account"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="672dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/enter"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="271dp"
        tools:layout_editor_absoluteY="672dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/registration"
        android:textColor="#000000"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="76dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/continue_with_sm_text"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="181dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:backgroundTint="#48B1E6"
        android:text="@string/register"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="598dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="340dp"
        android:layout_height="56dp"
        app:boxBackgroundColor="#F5F5F7"
        app:boxBackgroundMode="outline"
        app:passwordToggleEnabled="false"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="271dp">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="335dp"
            android:layout_height="49dp"
            android:backgroundTint="#F5F5F7"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/name_hint"
            android:password="false"
            android:singleLine="false"
            android:textColor="#A2A2A2" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/your_name"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="238dp" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="220dp"
        android:layout_height="47dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/personal_data_agreement"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="520dp" />
</androidx.constraintlayout.widget.ConstraintLayout>