<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Presentation.ForgotPassword">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="340dp"
        android:layout_height="56dp"
        app:boxBackgroundColor="#F5F5F7"
        app:boxBackgroundMode="outline"
        app:passwordToggleEnabled="false"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="310dp">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="335dp"
            android:layout_height="49dp"
            android:backgroundTint="#F5F5F7"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/email_hint"
            android:password="false"
            android:singleLine="false"
            android:textColor="#A2A2A2" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="44sp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="120dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/enter_your_account"
        android:textColor="@color/hint"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="181dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/Email"
        android:textColor="@color/text"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="277dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/button_cyan"
        android:text="@string/send"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="417dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="59dp"
        android:layout_height="62dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="onGobackButtonClick"
        app:srcCompat="@drawable/gobackicon"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>