<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/welcome_message"
        android:textColor="#000000"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="135dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/fill_data_text"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="211dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/continue_with_sm_text"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="242dp" />
</androidx.constraintlayout.widget.ConstraintLayout>